Fix T60855: workspace duplicate does not preserve addons filters.