source/blender/makesdna/DNA_workspace_types.h
@@ -133,7 +133,7 @@ typedef struct WorkSpace {
 
 	/* Feature tagging (use for addons) */
 	/** #wmOwnerID. */
-	ListBase owner_ids DNA_PRIVATE_WORKSPACE_READ_WRITE;
+	ListBase owner_ids;
 
 	/* should be: '#ifdef USE_WORKSPACE_TOOL'. */
 
@@ -151,7 +151,7 @@ typedef struct WorkSpace {
 	int object_mode;
 
 	/** Enum eWorkSpaceFlags. */
-	int flags DNA_PRIVATE_WORKSPACE;
+	int flags;
 
 	/* Number for workspace tab reordering in the UI. */
 	int order;
